--- a/code/20210413-AlphaBeta/scenarios/index.html
+++ b/code/20210413-AlphaBeta/scenarios/index.html
@@ -30,12 +30,12 @@
       <td></td>
       <td>Description:</td>
       <td></td>
+      <td>With RanGTP regeneration</td>
       <td></td>
-      <td>Increase ImpB</td>
-      <td>Increase NPC</td>
-      <td>No RanGTP reg.</td>
-      <td>Increase ImpB</td>
-      <td>Increase NPC</td>
+      <td></td>
+      <td>Without RanGTP regeneration</td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <th></th>
@@ -46,12 +46,12 @@
       <td></td>
       <td></td>
       <td></td>
-      <td>*</td>
-      <td>*</td>
-      <td>*</td>
-      <td>*</td>
-      <td>*</td>
-      <td>*</td>
+      <td>Low ImpB</td>
+      <td>Increase ImpB</td>
+      <td>Increase NPC</td>
+      <td>Low ImpB</td>
+      <td>Increase ImpB</td>
+      <td>Increase NPC</td>
     </tr>
     <tr>
       <th></th>
