--- a/code/20210413-AlphaBeta/model.html
+++ b/code/20210413-AlphaBeta/model.html
@@ -1,6 +1,6 @@
 Model name: alpha_beta
 <br>
-17-Oct-2021 08:48:56
+17-Oct-2021 09:04:44
 <br>
 <br>
 Model parameters
@@ -100,6 +100,22 @@ true
 </td>
 <td>
 picoliter
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+C
+</td>
+<td>
+true
+</td>
+<td>
+     1
+
+</td>
+<td>
 </td>
 <td>
 </td>
@@ -824,7 +840,7 @@ Notes
 r7
 </td>
 <td>
-[ImpA(c)] + [ImpB(c)] <-> [ImpA·ImpB(c)]
+NE.[ImpA(c)] + NE.[ImpB(c)] <-> NE.[ImpA·ImpB(c)]
 </td>
 <td>
 kf
@@ -847,7 +863,7 @@ true
 r7
 </td>
 <td>
-[ImpA(c)] + [ImpB(c)] <-> [ImpA·ImpB(c)]
+NE.[ImpA(c)] + NE.[ImpB(c)] <-> NE.[ImpA·ImpB(c)]
 </td>
 <td>
 kr
@@ -870,7 +886,7 @@ true
 r9
 </td>
 <td>
-[ImpA(c)] + [ImpB·NPC] -> [ImpA·ImpB·NPC]
+NE.[ImpA(c)] + NE.[ImpB·NPC] -> NE.[ImpA·ImpB·NPC]
 </td>
 <td>
 kf
@@ -893,7 +909,7 @@ true
 r9
 </td>
 <td>
-[ImpA(c)] + [ImpB·NPC] -> [ImpA·ImpB·NPC]
+NE.[ImpA(c)] + NE.[ImpB·NPC] -> NE.[ImpA·ImpB·NPC]
 </td>
 <td>
 kr
@@ -916,7 +932,7 @@ true
 r10
 </td>
 <td>
-[NLS(c)] + [ImpA·ImpB(c)] <-> [NLS·ImpA·ImpB(c)]
+NE.[NLS(c)] + NE.[ImpA·ImpB(c)] <-> NE.[NLS·ImpA·ImpB(c)]
 </td>
 <td>
 kf
@@ -939,7 +955,7 @@ true
 r10
 </td>
 <td>
-[NLS(c)] + [ImpA·ImpB(c)] <-> [NLS·ImpA·ImpB(c)]
+NE.[NLS(c)] + NE.[ImpA·ImpB(c)] <-> NE.[NLS·ImpA·ImpB(c)]
 </td>
 <td>
 kr
@@ -962,7 +978,7 @@ true
 r11
 </td>
 <td>
-[NLS·ImpA·ImpB(c)] + NPC <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS·ImpA·ImpB(c)] + NE.NPC <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf
@@ -985,7 +1001,7 @@ true
 r11
 </td>
 <td>
-[NLS·ImpA·ImpB(c)] + NPC <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS·ImpA·ImpB(c)] + NE.NPC <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kr
@@ -1008,7 +1024,7 @@ true
 r12
 </td>
 <td>
-[NLS(c)] + [ImpA·ImpB·NPC] <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS(c)] + NE.[ImpA·ImpB·NPC] <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf
@@ -1031,7 +1047,7 @@ true
 r12
 </td>
 <td>
-[NLS(c)] + [ImpA·ImpB·NPC] <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS(c)] + NE.[ImpA·ImpB·NPC] <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kr
@@ -1054,7 +1070,7 @@ true
 knockoff
 </td>
 <td>
-[Ran·GTP(n)] + [NLS·ImpA·ImpB·NPC] -> [Ran·GTP·ImpB·NPC] + [ImpA(n)] + [NLS(n)]
+NE.[Ran·GTP(n)] + NE.[NLS·ImpA·ImpB·NPC] -> NE.[Ran·GTP·ImpB·NPC] + NE.[ImpA(n)] + NE.[NLS(n)]
 </td>
 <td>
 kf
@@ -1077,7 +1093,7 @@ true
 hydrolysis of Ran·GTP·ImpB·NPC
 </td>
 <td>
-[Ran·GTP·ImpB·NPC] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpB·NPC] + RanGAP + RanBP1
+NE.[Ran·GTP·ImpB·NPC] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpB·NPC] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 kf
@@ -1100,7 +1116,7 @@ true
 CAS with NPC
 </td>
 <td>
-[CAS(c)] + NPC <-> [CAS·NPC]
+NE.[CAS(c)] + NE.NPC <-> NE.[CAS·NPC]
 </td>
 <td>
 kf
@@ -1123,7 +1139,7 @@ true
 CAS with NPC
 </td>
 <td>
-[CAS(c)] + NPC <-> [CAS·NPC]
+NE.[CAS(c)] + NE.NPC <-> NE.[CAS·NPC]
 </td>
 <td>
 kr
@@ -1146,7 +1162,7 @@ true
 CAS with Ran
 </td>
 <td>
-[Ran·GTP(n)] + [CAS(n)] <-> [CAS·Ran·GTP(n)]
+NE.[Ran·GTP(n)] + NE.[CAS(n)] <-> NE.[CAS·Ran·GTP(n)]
 </td>
 <td>
 kf
@@ -1169,7 +1185,7 @@ true
 CAS with Ran
 </td>
 <td>
-[Ran·GTP(n)] + [CAS(n)] <-> [CAS·Ran·GTP(n)]
+NE.[Ran·GTP(n)] + NE.[CAS(n)] <-> NE.[CAS·Ran·GTP(n)]
 </td>
 <td>
 kr
@@ -1192,7 +1208,7 @@ true
 hydrolysis of ImpA·CAS·Ran·GTP·NPC
 </td>
 <td>
-[ImpA·CAS·Ran·GTP·NPC] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpA(c)] + [CAS·NPC] + RanGAP + RanBP1
+NE.[ImpA·CAS·Ran·GTP·NPC] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpA(c)] + NE.[CAS·NPC] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 kf
@@ -1215,7 +1231,7 @@ true
 CAS·Ran with ImpA
 </td>
 <td>
-[ImpA(n)] + [CAS·Ran·GTP(n)] -> [ImpA·CAS·Ran·GTP(n)]
+NE.[ImpA(n)] + NE.[CAS·Ran·GTP(n)] -> NE.[ImpA·CAS·Ran·GTP(n)]
 </td>
 <td>
 kf
@@ -1238,7 +1254,7 @@ true
 Ran gradient
 </td>
 <td>
-[Ran·GDP(c)] -> [Ran·GTP(n)]
+NE.[Ran·GDP(c)] -> NE.[Ran·GTP(n)]
 </td>
 <td>
 k_pump
@@ -1261,7 +1277,7 @@ true
 Complex CAS with NPC
 </td>
 <td>
-[ImpA·CAS·Ran·GTP(c)] + NPC <-> [ImpA·CAS·Ran·GTP·NPC]
+NE.[ImpA·CAS·Ran·GTP(c)] + NE.NPC <-> NE.[ImpA·CAS·Ran·GTP·NPC]
 </td>
 <td>
 kf
@@ -1284,7 +1300,7 @@ true
 Complex CAS with NPC
 </td>
 <td>
-[ImpA·CAS·Ran·GTP(c)] + NPC <-> [ImpA·CAS·Ran·GTP·NPC]
+NE.[ImpA·CAS·Ran·GTP(c)] + NE.NPC <-> NE.[ImpA·CAS·Ran·GTP·NPC]
 </td>
 <td>
 kr
@@ -1307,7 +1323,7 @@ true
 ΔCAS with NPC
 </td>
 <td>
-[ΔCAS(c)] + NPC <-> [ΔCAS·NPC]
+NE.[ΔCAS(c)] + NE.NPC <-> NE.[ΔCAS·NPC]
 </td>
 <td>
 kf
@@ -1330,7 +1346,7 @@ true
 ΔCAS with NPC
 </td>
 <td>
-[ΔCAS(c)] + NPC <-> [ΔCAS·NPC]
+NE.[ΔCAS(c)] + NE.NPC <-> NE.[ΔCAS·NPC]
 </td>
 <td>
 kr
@@ -1353,7 +1369,7 @@ true
 ΔCAS with Ran
 </td>
 <td>
-[Ran·GTP(n)] + [ΔCAS(n)] <-> [ΔCAS·Ran·GTP(n)]
+NE.[Ran·GTP(n)] + NE.[ΔCAS(n)] <-> NE.[ΔCAS·Ran·GTP(n)]
 </td>
 <td>
 kf
@@ -1376,7 +1392,7 @@ true
 ΔCAS with Ran
 </td>
 <td>
-[Ran·GTP(n)] + [ΔCAS(n)] <-> [ΔCAS·Ran·GTP(n)]
+NE.[Ran·GTP(n)] + NE.[ΔCAS(n)] <-> NE.[ΔCAS·Ran·GTP(n)]
 </td>
 <td>
 kr
@@ -1399,7 +1415,7 @@ true
 ΔCAS·Ran with ImpA
 </td>
 <td>
-[ImpA(n)] + [ΔCAS·Ran·GTP(n)] -> [ImpA·ΔCAS·Ran·GTP(n)]
+NE.[ImpA(n)] + NE.[ΔCAS·Ran·GTP(n)] -> NE.[ImpA·ΔCAS·Ran·GTP(n)]
 </td>
 <td>
 kf
@@ -1422,7 +1438,7 @@ true
 Complex ΔCAS with NPC
 </td>
 <td>
-[ImpA·ΔCAS·Ran·GTP(c)] + NPC <-> [ImpA·ΔCAS·Ran·GTP·NPC]
+NE.[ImpA·ΔCAS·Ran·GTP(c)] + NE.NPC <-> NE.[ImpA·ΔCAS·Ran·GTP·NPC]
 </td>
 <td>
 kf
@@ -1445,7 +1461,7 @@ true
 Complex ΔCAS with NPC
 </td>
 <td>
-[ImpA·ΔCAS·Ran·GTP(c)] + NPC <-> [ImpA·ΔCAS·Ran·GTP·NPC]
+NE.[ImpA·ΔCAS·Ran·GTP(c)] + NE.NPC <-> NE.[ImpA·ΔCAS·Ran·GTP·NPC]
 </td>
 <td>
 kr
@@ -1468,7 +1484,7 @@ true
 hydrolysis of ImpA·ΔCAS·Ran·GTP·NPC
 </td>
 <td>
-[ImpA·ΔCAS·Ran·GTP·NPC] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpA(c)] + [ΔCAS·NPC] + RanGAP + RanBP1
+NE.[ImpA·ΔCAS·Ran·GTP·NPC] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpA(c)] + NE.[ΔCAS·NPC] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 kf
@@ -1491,7 +1507,7 @@ true
 Replenish NLS
 </td>
 <td>
-null -> [NLS(c)]
+null -> NE.[NLS(c)]
 </td>
 <td>
 kf
@@ -1514,7 +1530,7 @@ true
 r12_1
 </td>
 <td>
-[NLS(n)] + [ImpA·ImpB·NPC] <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS(n)] + NE.[ImpA·ImpB·NPC] <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf
@@ -1537,7 +1553,7 @@ true
 r12_1
 </td>
 <td>
-[NLS(n)] + [ImpA·ImpB·NPC] <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS(n)] + NE.[ImpA·ImpB·NPC] <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kr
@@ -1560,7 +1576,7 @@ true
 r10_1
 </td>
 <td>
-[NLS(n)] + [ImpA·ImpB(n)] <-> [NLS·ImpA·ImpB(n)]
+NE.[NLS(n)] + NE.[ImpA·ImpB(n)] <-> NE.[NLS·ImpA·ImpB(n)]
 </td>
 <td>
 kf
@@ -1583,7 +1599,7 @@ true
 r10_1
 </td>
 <td>
-[NLS(n)] + [ImpA·ImpB(n)] <-> [NLS·ImpA·ImpB(n)]
+NE.[NLS(n)] + NE.[ImpA·ImpB(n)] <-> NE.[NLS·ImpA·ImpB(n)]
 </td>
 <td>
 kr
@@ -1606,7 +1622,7 @@ true
 r11_1
 </td>
 <td>
-[NLS·ImpA·ImpB(n)] + NPC <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS·ImpA·ImpB(n)] + NE.NPC <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf
@@ -1629,7 +1645,7 @@ true
 r11_1
 </td>
 <td>
-[NLS·ImpA·ImpB(n)] + NPC <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS·ImpA·ImpB(n)] + NE.NPC <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kr
@@ -1652,7 +1668,7 @@ true
 Passive diffusion
 </td>
 <td>
-[NLS(n)] <-> [NLS(c)]
+NE.[NLS(n)] <-> NE.[NLS(c)]
 </td>
 <td>
 k_diff
@@ -1706,7 +1722,7 @@ true
 true
 </td>
 <td>
-[ImpB(c)] + NPC <-> [ImpB·NPC]
+NE.[ImpB(c)] + NE.NPC <-> NE.[ImpB·NPC]
 </td>
 <td>
 k_ImpB_on*NE.[ImpB(c)]*NE.NPC-k_ImpB_off*NE.[ImpB·NPC]
@@ -1726,7 +1742,7 @@ true
 true
 </td>
 <td>
-[ImpB(n)] + NPC <-> [ImpB·NPC]
+NE.[ImpB(n)] + NE.NPC <-> NE.[ImpB·NPC]
 </td>
 <td>
 k_ImpB_on*NE.[ImpB(n)]*NE.NPC-k_ImpB_off*NE.[ImpB·NPC]
@@ -1746,7 +1762,7 @@ true
 true
 </td>
 <td>
-[ImpA·ImpB(c)] + NPC <-> [ImpA·ImpB·NPC]
+NE.[ImpA·ImpB(c)] + NE.NPC <-> NE.[ImpA·ImpB·NPC]
 </td>
 <td>
 k_ImpB_on*[ImpA·ImpB(c)]*NPC-k_ImpB_off*[ImpA·ImpB·NPC]
@@ -1767,7 +1783,7 @@ true
 true
 </td>
 <td>
-[ImpA(c)] + [ImpB(c)] <-> [ImpA·ImpB(c)]
+NE.[ImpA(c)] + NE.[ImpB(c)] <-> NE.[ImpA·ImpB(c)]
 </td>
 <td>
 r7.kf*[ImpA(c)]*[ImpB(c)]-r7.kr*[ImpA·ImpB(c)]
@@ -1787,7 +1803,7 @@ true
 false
 </td>
 <td>
-[ImpA(c)] + [ImpB·NPC] -> [ImpA·ImpB·NPC]
+NE.[ImpA(c)] + NE.[ImpB·NPC] -> NE.[ImpA·ImpB·NPC]
 </td>
 <td>
 r9.kf*[ImpA(c)]*[ImpB·NPC]-r9.kr*[ImpA·ImpB·NPC]
@@ -1808,7 +1824,7 @@ true
 true
 </td>
 <td>
-[NLS(c)] + [ImpA·ImpB(c)] <-> [NLS·ImpA·ImpB(c)]
+NE.[NLS(c)] + NE.[ImpA·ImpB(c)] <-> NE.[NLS·ImpA·ImpB(c)]
 </td>
 <td>
 kf*[NLS(c)]*[ImpA·ImpB(c)]-kr*[NLS·ImpA·ImpB(c)]
@@ -1828,7 +1844,7 @@ true
 true
 </td>
 <td>
-[NLS·ImpA·ImpB(c)] + NPC <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS·ImpA·ImpB(c)] + NE.NPC <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf*[NLS·ImpA·ImpB(c)]*NPC-kr*[NLS·ImpA·ImpB·NPC]
@@ -1849,7 +1865,7 @@ true
 true
 </td>
 <td>
-[NLS(c)] + [ImpA·ImpB·NPC] <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS(c)] + NE.[ImpA·ImpB·NPC] <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf*[NLS(c)]*[ImpA·ImpB·NPC]-kr*[NLS·ImpA·ImpB·NPC]
@@ -1870,7 +1886,7 @@ true
 false
 </td>
 <td>
-[Ran·GTP(n)] + [NLS·ImpA·ImpB·NPC] -> [Ran·GTP·ImpB·NPC] + [ImpA(n)] + [NLS(n)]
+NE.[Ran·GTP(n)] + NE.[NLS·ImpA·ImpB·NPC] -> NE.[Ran·GTP·ImpB·NPC] + NE.[ImpA(n)] + NE.[NLS(n)]
 </td>
 <td>
 knockoff.kf*[Ran·GTP(n)]*[NLS·ImpA·ImpB·NPC]
@@ -1890,7 +1906,7 @@ true
 false
 </td>
 <td>
-[Ran·GTP·ImpB·NPC] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpB·NPC] + RanGAP + RanBP1
+NE.[Ran·GTP·ImpB·NPC] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpB·NPC] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 kf*[Ran·GTP·ImpB·NPC]
@@ -1910,7 +1926,7 @@ true
 true
 </td>
 <td>
-[CAS(c)] + NPC <-> [CAS·NPC]
+NE.[CAS(c)] + NE.NPC <-> NE.[CAS·NPC]
 </td>
 <td>
 kf*[CAS(c)]*NPC-kr*[CAS·NPC]
@@ -1931,7 +1947,7 @@ true
 true
 </td>
 <td>
-[CAS(n)] + NPC <-> [CAS·NPC]
+NE.[CAS(n)] + NE.NPC <-> NE.[CAS·NPC]
 </td>
 <td>
 [CAS with NPC].kf*[CAS(n)]*NPC-[CAS with NPC].kr*[CAS·NPC]
@@ -1951,7 +1967,7 @@ true
 true
 </td>
 <td>
-[Ran·GTP(n)] + [CAS(n)] <-> [CAS·Ran·GTP(n)]
+NE.[Ran·GTP(n)] + NE.[CAS(n)] <-> NE.[CAS·Ran·GTP(n)]
 </td>
 <td>
 kf*[Ran·GTP(n)]*[CAS(n)]-kr*[CAS·Ran·GTP(n)]
@@ -1974,7 +1990,7 @@ true
 true
 </td>
 <td>
-[ImpA·CAS·Ran·GTP(n)] + NPC <-> [ImpA·CAS·Ran·GTP·NPC]
+NE.[ImpA·CAS·Ran·GTP(n)] + NE.NPC <-> NE.[ImpA·CAS·Ran·GTP·NPC]
 </td>
 <td>
 [Complex CAS with NPC].kf*[ImpA·CAS·Ran·GTP(n)]*NPC - [Complex CAS with NPC].kr*[ImpA·CAS·Ran·GTP·NPC]
@@ -1994,7 +2010,7 @@ true
 false
 </td>
 <td>
-[ImpA·CAS·Ran·GTP·NPC] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpA(c)] + [CAS·NPC] + RanGAP + RanBP1
+NE.[ImpA·CAS·Ran·GTP·NPC] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpA(c)] + NE.[CAS·NPC] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 kf*[ImpA·CAS·Ran·GTP·NPC]
@@ -2014,7 +2030,7 @@ true
 false
 </td>
 <td>
-[ImpA(n)] + [CAS·Ran·GTP(n)] -> [ImpA·CAS·Ran·GTP(n)]
+NE.[ImpA(n)] + NE.[CAS·Ran·GTP(n)] -> NE.[ImpA·CAS·Ran·GTP(n)]
 </td>
 <td>
 kf*[ImpA(n)]*[CAS·Ran·GTP(n)]
@@ -2034,7 +2050,7 @@ true
 false
 </td>
 <td>
-[Ran·GDP(c)] -> [Ran·GTP(n)]
+NE.[Ran·GDP(c)] -> NE.[Ran·GTP(n)]
 </td>
 <td>
 k_pump*[Ran·GDP(c)]
@@ -2054,7 +2070,7 @@ true
 true
 </td>
 <td>
-[ImpA·ImpB(n)] + NPC <-> [ImpA·ImpB·NPC]
+NE.[ImpA·ImpB(n)] + NE.NPC <-> NE.[ImpA·ImpB·NPC]
 </td>
 <td>
 k_ImpB_on*NE.[ImpA·ImpB(n)]*NE.NPC-k_ImpB_off*NE.[ImpA·ImpB·NPC]
@@ -2075,7 +2091,7 @@ true
 false
 </td>
 <td>
-[ImpA(n)] + [ImpB·NPC] -> [ImpA·ImpB·NPC]
+NE.[ImpA(n)] + NE.[ImpB·NPC] -> NE.[ImpA·ImpB·NPC]
 </td>
 <td>
 r9.kf*NE.[ImpA(n)]*NE.[ImpB·NPC]-r9.kr*NE.[ImpA·ImpB·NPC]
@@ -2096,7 +2112,7 @@ true
 true
 </td>
 <td>
-[ImpA(n)] + [ImpB(n)] <-> [ImpA·ImpB(n)]
+NE.[ImpA(n)] + NE.[ImpB(n)] <-> NE.[ImpA·ImpB(n)]
 </td>
 <td>
 r7.kf*NE.[ImpA(n)]*NE.[ImpB(n)]-r7.kr*NE.[ImpA·ImpB(n)]
@@ -2116,7 +2132,7 @@ true
 true
 </td>
 <td>
-[ImpA·CAS·Ran·GTP(c)] + NPC <-> [ImpA·CAS·Ran·GTP·NPC]
+NE.[ImpA·CAS·Ran·GTP(c)] + NE.NPC <-> NE.[ImpA·CAS·Ran·GTP·NPC]
 </td>
 <td>
 kf*NE.[ImpA·CAS·Ran·GTP(c)]*NE.NPC-kr*NE.[ImpA·CAS·Ran·GTP·NPC]
@@ -2142,7 +2158,7 @@ true
 false
 </td>
 <td>
-[ImpA·CAS·Ran·GTP(c)] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpA(c)] + [CAS(c)] + RanGAP + RanBP1
+NE.[ImpA·CAS·Ran·GTP(c)] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpA(c)] + NE.[CAS(c)] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 [hydrolysis of ImpA·CAS·Ran·GTP·NPC].kf*NE.[ImpA·CAS·Ran·GTP(c)]
@@ -2162,7 +2178,7 @@ true
 true
 </td>
 <td>
-[ΔCAS(c)] + NPC <-> [ΔCAS·NPC]
+NE.[ΔCAS(c)] + NE.NPC <-> NE.[ΔCAS·NPC]
 </td>
 <td>
 kf*NE.[ΔCAS(c)]*NE.NPC-kr*NE.[ΔCAS·NPC]
@@ -2183,7 +2199,7 @@ true
 true
 </td>
 <td>
-[ΔCAS(n)] + NPC <-> [ΔCAS·NPC]
+NE.[ΔCAS(n)] + NE.NPC <-> NE.[ΔCAS·NPC]
 </td>
 <td>
 [ΔCAS with NPC].kf*NE.[ΔCAS(n)]*NE.NPC-[ΔCAS with NPC].kr*NE.[ΔCAS·NPC]
@@ -2203,7 +2219,7 @@ true
 true
 </td>
 <td>
-[Ran·GTP(n)] + [ΔCAS(n)] <-> [ΔCAS·Ran·GTP(n)]
+NE.[Ran·GTP(n)] + NE.[ΔCAS(n)] <-> NE.[ΔCAS·Ran·GTP(n)]
 </td>
 <td>
 kf*NE.[Ran·GTP(n)]*NE.[ΔCAS(n)]-kr*NE.[ΔCAS·Ran·GTP(n)]
@@ -2226,7 +2242,7 @@ true
 false
 </td>
 <td>
-[ImpA(n)] + [ΔCAS·Ran·GTP(n)] -> [ImpA·ΔCAS·Ran·GTP(n)]
+NE.[ImpA(n)] + NE.[ΔCAS·Ran·GTP(n)] -> NE.[ImpA·ΔCAS·Ran·GTP(n)]
 </td>
 <td>
 kf*NE.[ImpA(n)]*NE.[ΔCAS·Ran·GTP(n)]
@@ -2246,7 +2262,7 @@ true
 true
 </td>
 <td>
-[ImpA·ΔCAS·Ran·GTP(c)] + NPC <-> [ImpA·ΔCAS·Ran·GTP·NPC]
+NE.[ImpA·ΔCAS·Ran·GTP(c)] + NE.NPC <-> NE.[ImpA·ΔCAS·Ran·GTP·NPC]
 </td>
 <td>
 kf*NE.[ImpA·ΔCAS·Ran·GTP(c)]*NE.NPC-kr*NE.[ImpA·ΔCAS·Ran·GTP·NPC]
@@ -2272,7 +2288,7 @@ true
 true
 </td>
 <td>
-[ImpA·ΔCAS·Ran·GTP(n)] + NPC <-> [ImpA·ΔCAS·Ran·GTP·NPC]
+NE.[ImpA·ΔCAS·Ran·GTP(n)] + NE.NPC <-> NE.[ImpA·ΔCAS·Ran·GTP·NPC]
 </td>
 <td>
 [Complex ΔCAS with NPC].kf*NE.[ImpA·ΔCAS·Ran·GTP(n)]*NE.NPC-[Complex ΔCAS with NPC].kr*NE.[ImpA·ΔCAS·Ran·GTP·NPC]
@@ -2292,7 +2308,7 @@ true
 false
 </td>
 <td>
-[ImpA·ΔCAS·Ran·GTP·NPC] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpA(c)] + [ΔCAS·NPC] + RanGAP + RanBP1
+NE.[ImpA·ΔCAS·Ran·GTP·NPC] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpA(c)] + NE.[ΔCAS·NPC] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 kf*NE.[ImpA·ΔCAS·Ran·GTP·NPC]
@@ -2312,7 +2328,7 @@ true
 false
 </td>
 <td>
-[ImpA·ΔCAS·Ran·GTP(c)] + RanGAP + RanBP1 -> [Ran·GDP(c)] + [ImpA(c)] + [ΔCAS(c)] + RanGAP + RanBP1
+NE.[ImpA·ΔCAS·Ran·GTP(c)] + NE.RanGAP + NE.RanBP1 -> NE.[Ran·GDP(c)] + NE.[ImpA(c)] + NE.[ΔCAS(c)] + NE.RanGAP + NE.RanBP1
 </td>
 <td>
 [hydrolysis of ImpA·ΔCAS·Ran·GTP·NPC].kf*NE.[ImpA·ΔCAS·Ran·GTP(c)]
@@ -2332,7 +2348,7 @@ true
 false
 </td>
 <td>
-null -> [NLS(c)]
+null -> NE.[NLS(c)]
 </td>
 <td>
 kf*[NLS(n)]
@@ -2351,7 +2367,7 @@ true
 true
 </td>
 <td>
-[NLS(n)] + [ImpA·ImpB·NPC] <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS(n)] + NE.[ImpA·ImpB·NPC] <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf*NE.[NLS(n)]*NE.[ImpA·ImpB·NPC]-kr*NE.[NLS·ImpA·ImpB·NPC]
@@ -2371,7 +2387,7 @@ true
 true
 </td>
 <td>
-[NLS(n)] + [ImpA·ImpB(n)] <-> [NLS·ImpA·ImpB(n)]
+NE.[NLS(n)] + NE.[ImpA·ImpB(n)] <-> NE.[NLS·ImpA·ImpB(n)]
 </td>
 <td>
 kf*NE.[NLS(n)]*NE.[ImpA·ImpB(n)]-kr*NE.[NLS·ImpA·ImpB(n)]
@@ -2391,7 +2407,7 @@ true
 true
 </td>
 <td>
-[NLS·ImpA·ImpB(n)] + NPC <-> [NLS·ImpA·ImpB·NPC]
+NE.[NLS·ImpA·ImpB(n)] + NE.NPC <-> NE.[NLS·ImpA·ImpB·NPC]
 </td>
 <td>
 kf*NE.[NLS·ImpA·ImpB(n)]*NE.NPC-kr*NE.[NLS·ImpA·ImpB·NPC]
@@ -2411,7 +2427,7 @@ true
 true
 </td>
 <td>
-[NLS(n)] <-> [NLS(c)]
+NE.[NLS(n)] <-> NE.[NLS(c)]
 </td>
 <td>
 k_diff * ([NLS(n)] - [NLS(c)])
@@ -2535,6 +2551,7 @@ r11_1.kf = 0.001
 r11_1.kr = 0.0001
 k_diff = 0
 NE = 1
+C = 1
 
 Initial Conditions:
 NPC = 0.5
