--- a/code/20210413-AlphaBeta/checkpoint/20211017-090522/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20211017-090522/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211017-090522<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/c8048041ea89c57b692d0cce56a8e8e0dd6d5a7a/code/20210413-AlphaBeta'>permalink</a><br>
