--- a/code/20210413-AlphaBeta/checkpoint/20211017-093334/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20211017-093334/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211017-093334<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/65e41c8aafb35a44c783a6592e18c52eae3d5315/code/20210413-AlphaBeta'>permalink</a><br>
