--- a/code/20210413-AlphaBeta/python/plot_ss/index.html
+++ b/code/20210413-AlphaBeta/python/plot_ss/index.html
@@ -21,15 +21,6 @@
       <td><a href="b_03_MoreNPC/CAS (excl. ΔCAS).png"><img style="width:196px" src="b_03_MoreNPC/CAS (excl. ΔCAS).png"/></a></td>
     </tr>
     <tr>
-      <th>ΔCAS</th>
-      <td><a href="a_01_LowImpB/ΔCAS.png"><img style="width:196px" src="a_01_LowImpB/ΔCAS.png"/></a></td>
-      <td><a href="a_02_HighImpB/ΔCAS.png"><img style="width:196px" src="a_02_HighImpB/ΔCAS.png"/></a></td>
-      <td><a href="a_03_MoreNPC/ΔCAS.png"><img style="width:196px" src="a_03_MoreNPC/ΔCAS.png"/></a></td>
-      <td><a href="b_01_LowImpB/ΔCAS.png"><img style="width:196px" src="b_01_LowImpB/ΔCAS.png"/></a></td>
-      <td><a href="b_02_HighImpB/ΔCAS.png"><img style="width:196px" src="b_02_HighImpB/ΔCAS.png"/></a></td>
-      <td><a href="b_03_MoreNPC/ΔCAS.png"><img style="width:196px" src="b_03_MoreNPC/ΔCAS.png"/></a></td>
-    </tr>
-    <tr>
       <th>CAS·Ran·GTP (excl. ΔCAS·Ran·GTP)</th>
       <td><a href="a_01_LowImpB/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="a_01_LowImpB/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="a_02_HighImpB/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="a_02_HighImpB/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
@@ -39,6 +30,15 @@
       <td><a href="b_03_MoreNPC/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="b_03_MoreNPC/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
     </tr>
     <tr>
+      <th>ImpA·CAS·Ran·GTP</th>
+      <td><a href="a_01_LowImpB/ImpA·CAS·Ran·GTP.png"><img style="width:196px" src="a_01_LowImpB/ImpA·CAS·Ran·GTP.png"/></a></td>
+      <td><a href="a_02_HighImpB/ImpA·CAS·Ran·GTP.png"><img style="width:196px" src="a_02_HighImpB/ImpA·CAS·Ran·GTP.png"/></a></td>
+      <td><a href="a_03_MoreNPC/ImpA·CAS·Ran·GTP.png"><img style="width:196px" src="a_03_MoreNPC/ImpA·CAS·Ran·GTP.png"/></a></td>
+      <td><a href="b_01_LowImpB/ImpA·CAS·Ran·GTP.png"><img style="width:196px" src="b_01_LowImpB/ImpA·CAS·Ran·GTP.png"/></a></td>
+      <td><a href="b_02_HighImpB/ImpA·CAS·Ran·GTP.png"><img style="width:196px" src="b_02_HighImpB/ImpA·CAS·Ran·GTP.png"/></a></td>
+      <td><a href="b_03_MoreNPC/ImpA·CAS·Ran·GTP.png"><img style="width:196px" src="b_03_MoreNPC/ImpA·CAS·Ran·GTP.png"/></a></td>
+    </tr>
+    <tr>
       <th>ΔCAS·Ran·GTP</th>
       <td><a href="a_01_LowImpB/ΔCAS·Ran·GTP.png"><img style="width:196px" src="a_01_LowImpB/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="a_02_HighImpB/ΔCAS·Ran·GTP.png"><img style="width:196px" src="a_02_HighImpB/ΔCAS·Ran·GTP.png"/></a></td>
@@ -46,6 +46,24 @@
       <td><a href="b_01_LowImpB/ΔCAS·Ran·GTP.png"><img style="width:196px" src="b_01_LowImpB/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="b_02_HighImpB/ΔCAS·Ran·GTP.png"><img style="width:196px" src="b_02_HighImpB/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="b_03_MoreNPC/ΔCAS·Ran·GTP.png"><img style="width:196px" src="b_03_MoreNPC/ΔCAS·Ran·GTP.png"/></a></td>
+    </tr>
+    <tr>
+      <th>ImpA·ΔCAS·Ran·GTP</th>
+      <td><a href="a_01_LowImpB/ImpA·ΔCAS·Ran·GTP.png"><img style="width:196px" src="a_01_LowImpB/ImpA·ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="a_02_HighImpB/ImpA·ΔCAS·Ran·GTP.png"><img style="width:196px" src="a_02_HighImpB/ImpA·ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="a_03_MoreNPC/ImpA·ΔCAS·Ran·GTP.png"><img style="width:196px" src="a_03_MoreNPC/ImpA·ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="b_01_LowImpB/ImpA·ΔCAS·Ran·GTP.png"><img style="width:196px" src="b_01_LowImpB/ImpA·ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="b_02_HighImpB/ImpA·ΔCAS·Ran·GTP.png"><img style="width:196px" src="b_02_HighImpB/ImpA·ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="b_03_MoreNPC/ImpA·ΔCAS·Ran·GTP.png"><img style="width:196px" src="b_03_MoreNPC/ImpA·ΔCAS·Ran·GTP.png"/></a></td>
+    </tr>
+    <tr>
+      <th>ΔCAS</th>
+      <td><a href="a_01_LowImpB/ΔCAS.png"><img style="width:196px" src="a_01_LowImpB/ΔCAS.png"/></a></td>
+      <td><a href="a_02_HighImpB/ΔCAS.png"><img style="width:196px" src="a_02_HighImpB/ΔCAS.png"/></a></td>
+      <td><a href="a_03_MoreNPC/ΔCAS.png"><img style="width:196px" src="a_03_MoreNPC/ΔCAS.png"/></a></td>
+      <td><a href="b_01_LowImpB/ΔCAS.png"><img style="width:196px" src="b_01_LowImpB/ΔCAS.png"/></a></td>
+      <td><a href="b_02_HighImpB/ΔCAS.png"><img style="width:196px" src="b_02_HighImpB/ΔCAS.png"/></a></td>
+      <td><a href="b_03_MoreNPC/ΔCAS.png"><img style="width:196px" src="b_03_MoreNPC/ΔCAS.png"/></a></td>
     </tr>
     <tr>
       <th>ImpB</th>
@@ -66,6 +84,15 @@
       <td><a href="b_03_MoreNPC/ImpA.png"><img style="width:196px" src="b_03_MoreNPC/ImpA.png"/></a></td>
     </tr>
     <tr>
+      <th>ImpA·ImpB</th>
+      <td><a href="a_01_LowImpB/ImpA·ImpB.png"><img style="width:196px" src="a_01_LowImpB/ImpA·ImpB.png"/></a></td>
+      <td><a href="a_02_HighImpB/ImpA·ImpB.png"><img style="width:196px" src="a_02_HighImpB/ImpA·ImpB.png"/></a></td>
+      <td><a href="a_03_MoreNPC/ImpA·ImpB.png"><img style="width:196px" src="a_03_MoreNPC/ImpA·ImpB.png"/></a></td>
+      <td><a href="b_01_LowImpB/ImpA·ImpB.png"><img style="width:196px" src="b_01_LowImpB/ImpA·ImpB.png"/></a></td>
+      <td><a href="b_02_HighImpB/ImpA·ImpB.png"><img style="width:196px" src="b_02_HighImpB/ImpA·ImpB.png"/></a></td>
+      <td><a href="b_03_MoreNPC/ImpA·ImpB.png"><img style="width:196px" src="b_03_MoreNPC/ImpA·ImpB.png"/></a></td>
+    </tr>
+    <tr>
       <th>Ran·GTP</th>
       <td><a href="a_01_LowImpB/Ran·GTP.png"><img style="width:196px" src="a_01_LowImpB/Ran·GTP.png"/></a></td>
       <td><a href="a_02_HighImpB/Ran·GTP.png"><img style="width:196px" src="a_02_HighImpB/Ran·GTP.png"/></a></td>
@@ -73,15 +100,6 @@
       <td><a href="b_01_LowImpB/Ran·GTP.png"><img style="width:196px" src="b_01_LowImpB/Ran·GTP.png"/></a></td>
       <td><a href="b_02_HighImpB/Ran·GTP.png"><img style="width:196px" src="b_02_HighImpB/Ran·GTP.png"/></a></td>
       <td><a href="b_03_MoreNPC/Ran·GTP.png"><img style="width:196px" src="b_03_MoreNPC/Ran·GTP.png"/></a></td>
-    </tr>
-    <tr>
-      <th>Ran·GDP</th>
-      <td><a href="a_01_LowImpB/Ran·GDP.png"><img style="width:196px" src="a_01_LowImpB/Ran·GDP.png"/></a></td>
-      <td><a href="a_02_HighImpB/Ran·GDP.png"><img style="width:196px" src="a_02_HighImpB/Ran·GDP.png"/></a></td>
-      <td><a href="a_03_MoreNPC/Ran·GDP.png"><img style="width:196px" src="a_03_MoreNPC/Ran·GDP.png"/></a></td>
-      <td><a href="b_01_LowImpB/Ran·GDP.png"><img style="width:196px" src="b_01_LowImpB/Ran·GDP.png"/></a></td>
-      <td><a href="b_02_HighImpB/Ran·GDP.png"><img style="width:196px" src="b_02_HighImpB/Ran·GDP.png"/></a></td>
-      <td><a href="b_03_MoreNPC/Ran·GDP.png"><img style="width:196px" src="b_03_MoreNPC/Ran·GDP.png"/></a></td>
     </tr>
     <tr>
       <th>NLS</th>
