--- a/code/20211018-Appli/checkpoint/20211110-131000/index.html
+++ b/code/20211018-Appli/checkpoint/20211110-131000/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211110-131000<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/4c46c91864ff3f45cd4b229fb11f73fa1989157b/code/20211018-Appli/checkpoint/20211018-105122'>permalink</a><br>
