--- a/code/20211018-Appli/scenarios/index.html
+++ b/code/20211018-Appli/scenarios/index.html
@@ -51,10 +51,10 @@
       <td></td>
       <td>Low ImpB</td>
       <td>Increase ImpB</td>
-      <td>Increase NPC</td>
+      <td>Increase #NPC</td>
       <td>Low ImpB</td>
       <td>Increase ImpB</td>
-      <td>Increase NPC</td>
+      <td>Increase #NPC</td>
     </tr>
     <tr>
       <th></th>
@@ -153,10 +153,10 @@
       <td></td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -170,10 +170,10 @@
       <td></td>
       <td>1</td>
       <td>1</td>
+      <td>10</td>
       <td>1</td>
       <td>1</td>
-      <td>1</td>
-      <td>1</td>
+      <td>10</td>
     </tr>
     <tr>
       <th></th>
@@ -187,10 +187,10 @@
       <td></td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
