--- a/code/20211018-Appli/cleared/scenarios/index.html
+++ b/code/20211018-Appli/cleared/scenarios/index.html
@@ -51,10 +51,10 @@
       <td></td>
       <td>Low ImpB</td>
       <td>Increase ImpB</td>
-      <td>Increase NPC</td>
+      <td>Increase #NPC</td>
       <td>Low ImpB</td>
       <td>Increase ImpB</td>
-      <td>Increase NPC</td>
+      <td>Increase #NPC</td>
     </tr>
     <tr>
       <th></th>
@@ -153,10 +153,10 @@
       <td></td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -170,10 +170,10 @@
       <td></td>
       <td>1</td>
       <td>1</td>
+      <td>10</td>
       <td>1</td>
       <td>1</td>
-      <td>1</td>
-      <td>1</td>
+      <td>10</td>
     </tr>
     <tr>
       <th></th>
@@ -187,10 +187,10 @@
       <td></td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
       <td>0.01</td>
       <td>0.01</td>
-      <td>1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -349,7 +349,7 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>CAS with NPC</td>
+      <td>CAS with NPC(c)</td>
       <td>kf</td>
       <td>1/uM/s</td>
       <td></td>
@@ -366,7 +366,41 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>CAS with NPC</td>
+      <td>CAS with NPC(c)</td>
+      <td>kr</td>
+      <td>1/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>CAS with NPC(n)</td>
+      <td>kf</td>
+      <td>1/uM/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>CAS with NPC(n)</td>
       <td>kr</td>
       <td>1/s</td>
       <td></td>
@@ -400,7 +434,7 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>Complex CAS with NPC</td>
+      <td>Complex CAS with NPC(c)</td>
       <td>kf</td>
       <td>1/uM/s</td>
       <td>i.e. ImpA·CAS·Ran·GTP</td>
@@ -417,7 +451,41 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>Complex CAS with NPC</td>
+      <td>Complex CAS with NPC(c)</td>
+      <td>kr</td>
+      <td>1/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>Complex CAS with NPC(n)</td>
+      <td>kf</td>
+      <td>1/uM/s</td>
+      <td>i.e. ImpA·CAS·Ran·GTP</td>
+      <td></td>
+      <td></td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>Complex CAS with NPC(n)</td>
       <td>kr</td>
       <td>1/s</td>
       <td></td>
