--- a/code/20211018-Appli/scenarios/index.html
+++ b/code/20211018-Appli/scenarios/index.html
@@ -349,7 +349,7 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>CAS with NPC</td>
+      <td>CAS with NPC(c)</td>
       <td>kf</td>
       <td>1/uM/s</td>
       <td></td>
@@ -366,7 +366,41 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>CAS with NPC</td>
+      <td>CAS with NPC(c)</td>
+      <td>kr</td>
+      <td>1/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+      <td>1e-4</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>CAS with NPC(n)</td>
+      <td>kf</td>
+      <td>1/uM/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>CAS with NPC(n)</td>
       <td>kr</td>
       <td>1/s</td>
       <td></td>
@@ -400,10 +434,10 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>Complex CAS with NPC</td>
+      <td>Complex CAS with NPC(c)</td>
       <td>kf</td>
       <td>1/uM/s</td>
-      <td>i.e. ImpA·CAS·Ran·GTP</td>
+      <td>"Complex CAS" = ImpA·CAS·Ran·GTP</td>
       <td></td>
       <td></td>
       <td>1e-3</td>
@@ -417,7 +451,41 @@
       <th></th>
       <td>Reaction</td>
       <td></td>
-      <td>Complex CAS with NPC</td>
+      <td>Complex CAS with NPC(c)</td>
+      <td>kr</td>
+      <td>1/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+      <td>1e-5</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>Complex CAS with NPC(n)</td>
+      <td>kf</td>
+      <td>1/uM/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+      <td>1e-3</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td></td>
+      <td>Complex CAS with NPC(n)</td>
       <td>kr</td>
       <td>1/s</td>
       <td></td>
