--- a/code/20211018-Appli/checkpoint/20211117-225510/index.html
+++ b/code/20211018-Appli/checkpoint/20211117-225510/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211117-225510<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/3071839f8e5fcb6e257bd5f02655f48d1d020ff9/code/20211018-Appli/checkpoint/20211110-182842'>permalink</a><br>
