--- a/code/20211018-Appli/scenarios/index.html
+++ b/code/20211018-Appli/scenarios/index.html
@@ -56,7 +56,7 @@
       <td></td>
       <td></td>
       <td>Physiological</td>
-      <td>More CAS</td>
+      <td>Half C</td>
       <td>Decrease ImpB</td>
       <td>Increase #NPC</td>
       <td></td>
@@ -116,7 +116,7 @@
       <td></td>
       <td></td>
       <td>1</td>
-      <td>3</td>
+      <td>1</td>
       <td>1</td>
       <td>1</td>
       <td></td>
@@ -136,7 +136,7 @@
       <td></td>
       <td></td>
       <td>1</td>
-      <td>3</td>
+      <td>0</td>
       <td>1</td>
       <td>1</td>
       <td></td>
@@ -276,7 +276,7 @@
       <td></td>
       <td></td>
       <td>5</td>
-      <td>5</td>
+      <td>0</td>
       <td>0.5</td>
       <td>5</td>
       <td></td>
@@ -316,7 +316,7 @@
       <td></td>
       <td></td>
       <td>4</td>
-      <td>4</td>
+      <td>0</td>
       <td>4</td>
       <td>4</td>
       <td></td>
