--- a/code/20211018-Appli/checkpoint/20220128-170323/index.html
+++ b/code/20211018-Appli/checkpoint/20220128-170323/index.html
@@ -1,1 +1,2 @@
 checkpoint/20220128-170323<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/ce14d92e461b9e036b5c5c6e680e2c1b312ec088/code/20211018-Appli/checkpoint/20211110-182842'>permalink</a><br>
