--- a/code/20211018-Appli/checkpoint/20220209-143110/index.html
+++ b/code/20211018-Appli/checkpoint/20220209-143110/index.html
@@ -1,1 +1,2 @@
 checkpoint/20220209-143110<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/e40259b678bd54c7fab468c79d8c6e461cff9c2d/code/20211018-Appli/checkpoint/20211110-182842'>permalink</a><br>
